Выполнение issues #5
В test в блоке collection заменить создание expected значений на
укороченный вызов of(..).